--- a/estilos.css
+++ b/estilos.css
@@ -66,13 +66,12 @@ img {
   color: #02010a;
 }
 #img2 {
-  width: 40%;
+  width: 41%;
   text-align: center;
-  float: left;
   transition: transform 2s;
   transition: drop-shadow 2s;
 }
-}
+
 #img2 img:hover {
   transform: rotateZ(10deg);
   -webkit-filter: drop-shadow(2px 2px #82c3a6);
@@ -80,13 +79,12 @@ img {
 }
 
 #img3 {
-  width: 40%;
+  width: 41%;
   text-align: center;
-  float: right;
   transition: transform 2s;
   transition: drop-shadow 2s;
 }
-}
+
 #img3 img:hover {
   transform: translate(20px,-5px);
   -webkit-filter: drop-shadow(2px 2px #82c3a6);
@@ -122,7 +120,6 @@ img {
   width: 25%;
   margin: 0 auto;
 }
-
 .redes_sociales img {
   width: 8%;
 }
@@ -158,4 +155,45 @@ img {
   .derechos {
     width: 100%;
   }
+  #fotos > .img1 {
+    width: 100%;
+  }
+  #fotos > .img2 {
+    width: 100%;
+  }
+  #fotos > .img3 {
+    width: 100%;
+  }
+  #fotos > .img4 {
+    width: 100%;
+  }
+  #fotos > .img5 {
+    width: 100%;
+  }
+  #fotos > .img6 {
+    width: 100%;
+  }
+
+}
+#fotos {
+  background-color: #d5c75f;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row wrap;
+}
+.img1, .img2, .img3, .img4, .img5, .img6 {
+  width: 33.3%;
+}
+.img1 {
+  -webkit-filter: blur(10px);
+  filter: blur(10px);
+}
+.img2, .img4, .img6 {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+.img3 {
+  -webkit-filter: sepia(90%);
+  filter: sepia(90%);
 }
